--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ p {
 }
 
 body {
-  background-color: #e5e5e5;
+  background-color: #dfbf3d;
   margin: 0;
 }
 
@@ -61,13 +61,14 @@ main {
 
 .coluna-menor {
   margin-top: 48px;
-  width: 288px;
+  width: 500px;
   font-family: "Futura Bk BT", sans-serif;
 }
 
 .coluna-menor li {
-  margin-top: 32px;
-  display: flex;
+  /* margin-top: 32px; */
+  display: inline-block;
+  text-align: left;
 }
 
 .linha {
@@ -78,6 +79,12 @@ main {
 
 .menu .linha {
   border-color: #4200ff;
+}
+
+.menu p {
+  text-align: justify;
+  font-size: 20px;
+  font-family: "Futura Bk BT", sans-serif;
 }
 
 .formacao .linha {
